@startuml
title Klasse Diagram - Triptop applicatie

class HotelController {
    - final HotelServicePort: HOTELSERVICEPORT
    + getHotelDetails(int HotelId) : HotelDto
}

interface HotelServicePort {
    + retrieveHotelDetails(int HotelId) : HotelDto
}

class HotelDto {
    - int: Id
    - String: Naam
    - String: Beschrijving
    - String: Locatie
}

class HotelServiceImpl {
    - final HOTELSERVICEADAPTER : HotelServiceAdapter
    + retrieveHotelDetails(int HotelId) : HotelDto
}

interface HotelApiAdapter {
    + fetchHotelDetails(int HotelId) : HotelDto
}

class HotelApiAdapterImpl {
    - final BOOKINGAPI : BookingAPI
    + fetchHotelDetails(int HotelId) : HotelDto
}

class BookingAPI {
    <<external>>
}



HotelController --> HotelServicePort : Maakt gebruik van
HotelController --> HotelDto : : Maakt gebruik van

HotelServicePort <|.. HotelServiceImpl : Implementeert
HotelApiAdapter <|.. HotelApiAdapterImpl : Implementeert

HotelServiceImpl --> HotelApiAdapter : Haalt data op van
HotelApiAdapterImpl --> BookingAPI : Haalt data op van
@enduml
